src/objects/LAC_Metric_Value__c.object
<CustomObject>
    <fields>
        <fullName>Calculated_Value__c</fullName>
        <description>The value that was calculated by the system for this metric</description>
        <label>Calculated Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date__c</fullName>
        <description>The date that the metric belongs to. This can be any date within a given quarter. We will calculate the quarter values from that date</description>
        <label>Date</label>
        <required>true</required>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Manual_Value__c</fullName>
        <description>Manually entered value</description>
        <label>Manual Value</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Metric__c</fullName>
        <description>The Metric Name. It should correspond to the class that&apos;s used to calculate the metric. See LacMetricManager</description>
        <label>Metric</label>
        <length>100</length>
        <required>true</required>
        <type>Text</type>
    </fields>
    <label>LAC Metric Value</label>
    <nameField>
        <label>LAC Metric Value Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>LAC Metric Values</pluralLabel>
    <sharingModel>Private</sharingModel>
</CustomObject>